tests/negative/typecheck/call-non-fn.orng
fn main() -> Int
    let x = 4
    x()